publication changes and personal

--- a/content/publication/semanticparts-19/cite.bib
+++ b/content/publication/semanticparts-19/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{semanticparts19,
- author = {Kushin Mukherjee and Robert Hawkins and Judith Fan},
+ author = {Mukherjee, Kushin and Hawkins, Robert D.  and Fan, Judith},
  booktitle = {Proceedings of the 41st Annual Meeting of the Cognitive Science Society},
  title = {Communicating semantic part information in drawings},
  year = {2019}
